--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     <section>
       <h1 class="text-4xl md:text-5xl font-bold leading-tight">Writer · Builder · Aspiring Polymath</h1>
       <p class="mt-4 text-lg text-gray-700">
-        Hi, I’m Emmanuel. I write essays, build projects, and follow curiosity wherever it leads.
+        Eyo, I’m Emmanuel. I write essays, build projects, and follow curiosity wherever it leads.
         My work spans from forward-facing tech and AI explorations to deeply personal reflections.
       </p>
     </section>
 
-    <!-- About -->
+    <!-- about -->
     <section id="about" class="mt-16">
-      <h2 class="text-2xl font-semibold">About</h2>
+      <h2 class="text-2xl font-semibold">about</h2>
       <p class="mt-4 text-gray-700">
         I believe writing is a way of making sense of the world. Medium is where I think loudly about
         technology, AI, and the future. Substack is where I slow down and write personally.
@@ -60,9 +60,9 @@
       </p>
     </section>
 
-    <!-- Writing -->
+    <!-- writing -->
     <section id="writing" class="mt-16">
-      <h2 class="text-2xl font-semibold">Writing</h2>
+      <h2 class="text-2xl font-semibold">writing</h2>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
         <div class="p-5 border rounded">
           <h3 class="font-semibold">From Medium</h3>
@@ -75,9 +75,9 @@
       </div>
     </section>
 
-    <!-- Projects -->
+    <!-- projects -->
     <section id="projects" class="mt-16">
-      <h2 class="text-2xl font-semibold">Projects</h2>
+      <h2 class="text-2xl font-semibold">projects</h2>
       <p class="mt-3 text-gray-700">Things I’m building and tinkering with on GitHub.</p>
       <div id="projectsList" class="mt-6 grid gap-6">
         <article class="p-5 border rounded">
@@ -95,21 +95,21 @@
       </div>
     </section>
 
-    <!-- Now -->
+    <!-- now -->
     <section id="now" class="mt-16">
-      <h2 class="text-2xl font-semibold">Now</h2>
+      <h2 class="text-2xl font-semibold">now</h2>
       <p class="mt-3 text-gray-700">
         Right now, I’m exploring new ways of writing online, studying the cultural impacts of AI,
         and hacking together small tools on GitHub.
       </p>
     </section>
 
-    <!-- Contact -->
+    <!-- contact -->
     <section id="contact" class="mt-16 pb-20">
-      <h2 class="text-2xl font-semibold">Contact</h2>
+      <h2 class="text-2xl font-semibold">contact</h2>
       <p class="mt-3 text-gray-700">If you want to connect, share ideas, or collaborate, reach out.</p>
       <ul class="mt-4 space-y-2 text-sm text-gray-700">
-        <li>Email: <a href="mailto:hello@emmanuelpaulmaah.com" class="text-accent">hello@emmanuelpaulmaah.com</a></li>
+        <li>Email: <a href="mailto:emmanuel.paulmaah@gmail.com" class="text-accent">emmanuel.paulmaah@gmail.com</a></li>
         <li>Medium: <a href="https://medium.com/@emmanuel.paulmaah" target="_blank" class="text-accent">medium.com/@emmanuel.paulmaah</a></li>
         <li>Substack: <a href="https://emmanuelpaulmaah.substack.com" target="_blank" class="text-accent">emmanuelpaulmaah.substack.com</a></li>
         <li>GitHub: <a href="https://github.com/Emmanuel-PaulMaah" target="_blank" class="text-accent">github.com/Emmanuel-PaulMaah</a></li>
