--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="max-w-4xl mx-auto px-6 py-4 flex items-center justify-between">
       <div class="font-semibold">Emmanuel PaulMaah</div>
       <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#about" class="hover:text-accent">About</a>
-        <a href="#writing" class="hover:text-accent">Writing</a>
-        <a href="#projects" class="hover:text-accent">Projects</a>
-        <a href="#now" class="hover:text-accent">Now</a>
-        <a href="#contact" class="hover:text-accent">Contact</a>
+        <a href="#about" class="hover:text-accent">about</a>
+        <a href="#writing" class="hover:text-accent">writing</a>
+        <a href="#projects" class="hover:text-accent">projects</a>
+        <a href="#now" class="hover:text-accent">now</a>
+        <a href="#contact" class="hover:text-accent">contact</a>
       </nav>
     </div>
   </header>
