--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
     <section>
       <h1 class="text-4xl md:text-5xl font-bold leading-tight">Writer · Builder · Aspiring Polymath</h1>
       <p class="mt-4 text-lg text-gray-700">
-        Eyo, I’m Emmanuel. I write essays, build projects, and follow curiosity wherever it leads.
-        My work spans from forward-facing tech and AI explorations to deeply personal reflections.
+        eyo, i’m emmanuel. i write essays, build projects, & follow my curiosity. i believe high agency + obsession are the greatest virtues.
       </p>
     </section>
 
